--- a/index.html
+++ b/index.html
@@ -16,22 +16,25 @@
 	<body>
 		<main>
 			<div>
-				<p>Etch a Sketch</p>
+				<p class="title">Etch a Sketch</p>
 			</div>
-			<div>
-				<p>Rows:</p>
-				<button>8</button>
-				<a href="#">8</a>
-				<a href="#">16</a>
-				<a href="#">24</a>
-				<a href="#">32</a>
-				<a href="#">40</a>
-				<a href="#">48</a>
-			</div>
-			<div>
-				<p>Colors:</p>
-				<button></button>
-				<button></button>
+			<div class="cnt">
+				<div class="cnt left">
+					<label for="options" class="ind">Rows: </label>
+					<select name="options" id="options">
+						<option value="8">8</option>
+						<option value="16">16</option>
+						<option value="24">24</option>
+						<option value="32">32</option>
+						<option value="40">40</option>
+						<option value="48">48</option>
+					</select>
+				</div>
+				<div class="cnt right">
+					<p class="ind">Colors:</p>
+					<button class="fill clr-1"></button>
+					<button class="fill clr-2"></button>
+				</div>
 			</div>
 		</main>
 	</body>
