Capitalize .cnt elements Add reset button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</div>
 			<div class="cnt">
 				<div class="cnt left">
-					<p class="ind">Rows:</p>
+					<p class="ind">ROWS:</p>
 					<div class="dropdown">
 						<input class="text-box" type="text" placeholder="select" readonly />
 						<div class="options">
@@ -35,9 +35,12 @@
 					</div>
 				</div>
 				<div class="cnt right">
-					<p class="ind">Colors:</p>
+					<p class="ind">COLORS:</p>
 					<button class="fill clr-1"></button>
 					<button class="fill clr-2"></button>
+				</div>
+				<div>
+					<button onclick="reset()" class="ind btn">RESET</button>
 				</div>
 			</div>
 		</main>
